samples/_failures_safe/1761006309_7959b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f229e70.c: In function ‘main’:
./samples/SAFE/__tmp_0f229e70.c:145:16: error: missing terminating " character
  145 |         printf("Cannot multiply: dimension mismatch\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0f229e70.c:145:9: error: expected expression at end of input
  145 |         printf("Cannot multiply: dimension mismatch\n
      |         ^~~~~~
./samples/SAFE/__tmp_0f229e70.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f229e70.c:145:9: error: expected declaration or statement at end of input
